--- a/content/settings.json
+++ b/content/settings.json
@@ -1,9 +1,4 @@
 {
   "title": "Knowledgebase",
-  "url": "",
-  "logo": {
-    "light": "/logo-light.svg",
-    "dark": "/logo-dark.svg"
-  },
-  "github": "muslimsmeetonline/knowledgebase"
+  "url": ""
 }
